# brainstorm-ctf

./: .gitignore  BACKEND_NOTES.md  README.md  docker-compose.yml  participant-demo.html  preview.html
.claude/agents/: ctf-backend-engineer.md
backend/: .gitignore  DEPLOY_RAILWAY.md  nixpacks.toml  package-lock.json  package.json  railway.json  server.js
backend/.claude/agent-memory/agent-output-auditor/: MEMORY.md  bug-anchor-download-auth.md
backend/.claude/agent-memory/ctf-backend-engineer/: MEMORY.md  anticheat-heuristics.md  backend-architecture.md  champion-field-fix.md  ctfd-vs-custom-backend.md  schema-and-race-safety.md  verification-2026-07-02.md
backend/challenges/: README.md
backend/challenges/L02-sign-of-life/: challenge.yml
backend/challenges/L02-sign-of-life/node_zero_handshake/: .gitignore  README.md
backend/challenges/L03-cold-start/: challenge.yml
backend/challenges/L03-cold-start/node_zero_coldstart/coldstart_recorder/: package.xml
backend/challenges/L04-corrupted-log/: challenge.yml
backend/challenges/L05-mission-047/: _organizer_generate_bag.py  challenge.yml
backend/challenges/L06-wake-sequence/: challenge.yml
backend/challenges/L07-diagnostic-beep/: _organizer_generate_beep.py  challenge.yml
backend/challenges/L08-full-boot/: challenge.yml
backend/challenges/L08-full-boot/node_zero_fullboot/full_boot/: package.xml  setup.py
backend/challenges/L08-full-boot/node_zero_fullboot/full_boot/full_boot/: supervisor_node.py
backend/challenges/L08-wake-sequence/: challenge.yml
backend/challenges/L09-diagnostic-beep/: challenge.yml
backend/challenges/_templates/: per-team-randomizer.py
backend/public/: eval.html  nodezero-portal.css  organizer.html  participant-live.html
backend/scripts/: bundle-challenges.js  reset-db.js  set-teams.js
backend/src/: anticheat.js  auth.js  crypto-utils.js  db.js  leaderboard.js  rate-limit.js  sse.js  submit.js
backend/src/routes/: organizer.js  participant.js
challenges/: README.md
challenges/L01-static-on-the-line/: challenge.yml
challenges/L02-sign-of-life/: challenge.yml
challenges/L02-sign-of-life/node_zero_handshake/: README.md
challenges/L02-sign-of-life/node_zero_handshake/handshake/: package.xml  setup.cfg
challenges/L02-sign-of-life/node_zero_handshake/handshake/handshake/: handshake_node.py
challenges/L02-sign-of-life/node_zero_handshake/handshake_interfaces/: CMakeLists.txt  package.xml
challenges/L03-cold-start/node_zero_coldstart/coldstart_recorder/: setup.cfg  setup.py
challenges/L04-corrupted-log/: challenge.yml
challenges/L05-mission-047/: _organizer_generate_bag.py  challenge.yml
challenges/L05-mission-047/node_zero_mission047/: README.md
challenges/L05-mission-047/node_zero_mission047/mission_047/: metadata.yaml  mission_047_0.db3
challenges/L06-uplink-dump/: challenge.yml  uplink_dump.txt
challenges/L06-wake-sequence/: challenge.yml
challenges/L06-wake-sequence/node_zero_wakeseq/: README.md
challenges/L06-wake-sequence/node_zero_wakeseq/wake_sequence/: package.xml  setup.cfg  setup.py
challenges/L06-wake-sequence/node_zero_wakeseq/wake_sequence_interfaces/: package.xml
challenges/L07-diagnostic-beep/: _organizer_generate_beep.py  beep_timing.csv  challenge.yml
challenges/L07-quiet-spaces/: challenge.yml
challenges/L08-full-boot/: challenge.yml
challenges/L08-full-boot/node_zero_fullboot/: README.md
challenges/L08-full-boot/node_zero_fullboot/full_boot/: package.xml  setup.cfg
challenges/L10-full-boot/: challenge.yml
theme/: home-page.html  nodezero.css  theme-header.html
(+16 files in other folders)
